maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:53: error: forward reference extends over definition of variable x
	fini = a
        ^