maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
var xBaggle = 0
var yBaggle = 0
for (i <- 0 to getMondeLargeur-1) {
	for (j <- 0 to getMondeHauteur-1) {
		if (aBiscuit(i,j)) {
			xBaggle = i
			yBaggle = j
		}
	}
}

def finsi() :Boolean ={
	for (i <- 0 to getMondeLargeur-1) {
		for (j <- 0 to getMondeHauteur-1) {
			if (getIndication(i,j)==9999) return false
//			if (getIndication(i,j)==10000) setIndication(i,j
		}
	}
	return true
}

setIndication(xBaggle,yBaggle,0)

def markAround(x:Int,y:Int,b:Int) ={
	var indic = getIndication(x,y) + 1
	var a = b
	if (y != 0) {
		if (!aMurNord(x,y) && getIndication(x,y-1) == 9999) {
			setIndication(x,y-1,indic)
			a = indic + 1
		}
	}
	if (x != 0) {
		if (!aMurOuest(x,y) && getIndication(x-1,y) == 9999) {
			setIndication(x-1,y,indic)
			a = indic + 1
		}
	}
	if (y != getMondeLargeur-1) {
		if (!aMurNord(x,y+1) && getIndication(x,y+1) == 9999) {
			setIndication(x,y+1,indic)
			a = indic + 1
		}
	}
	if (x != getMondeHauteur-1) {
		if (!aMurOuest(x+1,y) && getIndication(x+1,y) == 9999) {
			setIndication(x+1,y,indic)
			a = indic + 1
		}
	}
	fini = a
}

var x = xBaggle
var y = yBaggle
var num = -1
var fini = -1
while (fini==num) {
	num += 1
	for (i <- 0 to getMondeLargeur-1) {
		for (j <- 0 to getMondeHauteur-1) {
			if (getIndication(i,j) == num) {
				if (num != 9999) markAround(i,j,fini)
				else setIndication(i,j,10000)
			}
		}
	}
}

}
